--- a/Grey_campus_Startup_Project.ipynb
+++ b/Grey_campus_Startup_Project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "9  123334.88       108679.17        304981.62  California  149759.96"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "Name: State, dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "49           1        0         0"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
        "9           1        0         0  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
        "max      1.000000   1.000000   1.000000  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1399,38 +1399,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeRegressor(random_state=20)"
+       "DecisionTreeRegressor(max_depth=3)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "dt = DecisionTreeRegressor(random_state = 20)\n",
+    "dt = DecisionTreeRegressor(max_depth = 3)\n",
     "dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeRegressor(random_state=20)"
+       "DecisionTreeRegressor(max_depth=3)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,19 +1451,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DT MSE:  48793335.339010015\n"
+      "DT MSE:  91996193.70965418\n"
      ]
     }
    ],
    "source": [
     "print('DT MSE: ', mean_squared_error(dt_preds, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DT train score:  0.9763919952920249\n",
+      "DT test score:  0.9280656826481832\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('DT train score: ', dt.score(X_train, y_train))\n",
+    "print('DT test score: ', dt.score(X_test, y_test))"
    ]
   },
   {
@@ -1475,38 +1494,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(random_state=10)"
+       "RandomForestRegressor(n_estimators=3)"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "rf = RandomForestRegressor(random_state = 10)\n",
+    "rf = RandomForestRegressor(n_estimators = 3)\n",
     "rf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(random_state=10)"
+       "RandomForestRegressor(n_estimators=3)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1518,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1527,19 +1546,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RF MSE:  45476150.57093444\n"
+      "RF MSE:  68486278.5870445\n"
      ]
     }
    ],
    "source": [
     "print('RF MSE: ', mean_squared_error(rf_preds, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RF train score:  0.9805813312106845\n",
+      "RF test score:  0.9464487225017832\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('RF train score: ', rf.score(X_train, y_train))\n",
+    "print('RF test score: ', rf.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_estimator =  4\n",
+      "Training Score = 0.9807756797643464\n",
+      "TEsting Score =  0.9484707544835375\n",
+      "n_estimator =  5\n",
+      "Training Score = 0.9777249829293628\n",
+      "TEsting Score =  0.9450470691032625\n",
+      "n_estimator =  6\n",
+      "Training Score = 0.9908132140115922\n",
+      "TEsting Score =  0.9715963380904714\n",
+      "n_estimator =  7\n",
+      "Training Score = 0.9839348200794203\n",
+      "TEsting Score =  0.9722901991221965\n",
+      "n_estimator =  8\n",
+      "Training Score = 0.9893136652876975\n",
+      "TEsting Score =  0.9759546444453372\n",
+      "n_estimator =  9\n",
+      "Training Score = 0.9842353188128008\n",
+      "TEsting Score =  0.9511739226375686\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4,10):\n",
+    "    RF = RandomForestRegressor(n_estimators = i)\n",
+    "    RF.fit(X_train, y_train)\n",
+    "    print(\"n_estimator = \",i)\n",
+    "    print(\"Training Score =\",RF.score(X_train,y_train))\n",
+    "    print(\"TEsting Score = \",RF.score(X_test,y_test))"
    ]
   },
   {
@@ -1568,6 +1645,13 @@
     "print('Linear Reg MSE: ', mean_squared_error(preds, y_test))\n",
     "print('Decision Tree MSE: ', mean_squared_error(dt_preds, y_test))\n",
     "print('Random Forest MSE: ', mean_squared_error(rf_preds, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Right Balance in performances of train and test can be considered."
    ]
   },
   {
